oauth2 시큐리티 미적용, 세션 적용 완료 2024-11-13 17:13

--- a/bibleTodo/src/main/resources/templates/admin.html
+++ b/bibleTodo/src/main/resources/templates/admin.html
@@ -7,5 +7,9 @@
 <body>
 	<h1>admin페이지</h1>
 	어드민페이지
+	
+	<form action="logoutProc" method="post">
+		<button type="submit">로그아웃</button>
+	</form>
 </body>
 </html>
