--- a/bibleTodo/src/main/resources/templates/login.html
+++ b/bibleTodo/src/main/resources/templates/login.html
@@ -9,12 +9,16 @@
 
 	<form action="loginProc" method="post">
 		<label for="user_id1">아이디: </label> 
-		<input type="text" id="user_id1" name="username" placeholder="id"> 
+		<input type="text" id="user_id1" name="id" placeholder="id"> 
 		
 		<label for="user_pw1">비밀번호: </label> 
-		<input type="password" id="user_pw1" name="password" placeholder="pw">
+		<input type="password" id="user_pw1" name="pw" placeholder="pw">
 		<input type="hidden" name="_csrf" value="{{_csrf.token}}"/>
 		<button type="submit">로그인하기</button>
+	</form>
+	
+	<form action="isSession" method="post">
+		<button type="submit">세션 확인하기</button>
 	</form>
 	<br>
 </body>
